fixing text-align-right

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -29,6 +29,7 @@ button:disabled {
   font-weight: bold;
 }
 
-.text-align-right {
+.align-right {
   text-align: right;
+  direction: rtl
 }
